@@ -201,6 +201,7 @@ parameters:
 - new parameter <constraints/xor/presolusehashing> in cons_xor.c, should pairwise presolving use hashing?, default TRUE
 - new parameter <branching/relpscost/advanced/conflenscore>, default value 0.001
 - new parameter <heuristics/oneopt/duringroot>, default value FALSE
+- display character of oneopt heuristic changed to 'b'
 
 SCIP version 1.1.0
 ===============
